fix(diff): handle YAML short-forms like '!GetAtt' in diff
CloudFormation allows using short-form versions of intrinsic functions like !GetAtt.
We handled them correctly in the `@aws-cdk/cloudformation-include` module,
so extract that logic to a common package,
and use it from the CLI in the `diff` command as well.

Fixes #6537

--- a/package.json
+++ b/package.json
@@ -61,14 +61,14 @@
       "@aws-cdk/cloud-assembly-schema/jsonschema/**",
       "@aws-cdk/cloud-assembly-schema/semver",
       "@aws-cdk/cloud-assembly-schema/semver/**",
-      "@aws-cdk/cloudformation-include/yaml",
-      "@aws-cdk/cloudformation-include/yaml/**",
       "@aws-cdk/core/fs-extra",
       "@aws-cdk/core/fs-extra/**",
       "@aws-cdk/core/minimatch",
       "@aws-cdk/core/minimatch/**",
       "@aws-cdk/cx-api/semver",
       "@aws-cdk/cx-api/semver/**",
+      "@aws-cdk/yaml-cfn/yaml",
+      "@aws-cdk/yaml-cfn/yaml/**",
       "aws-cdk-lib/case",
       "aws-cdk-lib/case/**",
       "aws-cdk-lib/fs-extra",
