--- a/packages/@aws-cdk/core/package.json
+++ b/packages/@aws-cdk/core/package.json
@@ -116,8 +116,7 @@
       "construct-interface-extends-iconstruct:@aws-cdk/core.ICustomResourceProvider",
       "props-physical-name:@aws-cdk/core.CustomResourceProps",
       "integ-return-type:@aws-cdk/core.IStackSynthesizer.bind",
-      "props-no-any:@aws-cdk/core.CfnJsonProps.value",
-      "base-construct-ctor:*"
+      "props-no-any:@aws-cdk/core.CfnJsonProps.value"
     ]
   },
   "scripts": {
