--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "packages": [
       "packages/*",
       "packages/@aws-cdk/*",
-      "packages/@aws-containers/*",
+      "packages/@aws-cdk-containers/*",
       "packages/@monocdk-experiment/*",
       "packages/@aws-cdk/*/lambda-packages/*",
       "tools/*"
