--- a/packages/@aws-cdk/aws-athena/package.json
+++ b/packages/@aws-cdk/aws-athena/package.json
@@ -30,7 +30,10 @@
   },
   "cdk-build": {
     "cloudformation": "AWS::Athena",
-    "jest": true
+    "jest": true,
+    "env": {
+      "AWSLINT_BASE_CONSTRUCT": true
+    }
   },
   "repository": {
     "type": "git",
