--- a/packages/@aws-cdk/aws-eks/package.json
+++ b/packages/@aws-cdk/aws-eks/package.json
@@ -83,6 +83,7 @@
     "@aws-cdk/aws-ssm": "0.0.0",
     "@aws-cdk/core": "0.0.0",
     "@aws-cdk/custom-resources": "0.0.0",
+    "cdk8s": "0.28.0",
     "constructs": "^3.0.4",
     "yaml": "1.10.0"
   },
@@ -99,6 +100,7 @@
     "@aws-cdk/aws-ssm": "0.0.0",
     "@aws-cdk/core": "0.0.0",
     "@aws-cdk/custom-resources": "0.0.0",
+    "cdk8s": "0.28.0",
     "constructs": "^3.0.4"
   },
   "engines": {
