--- a/lerna.json
+++ b/lerna.json
@@ -5,6 +5,7 @@
   "packages": [
     "packages/*",
     "packages/@aws-cdk/*",
+    "packages/@aws-cdk-containers/*",
     "packages/@monocdk-experiment/*",
     "packages/@aws-cdk/*/lambda-packages/*",
     "tools/*"
