--- a/packages/@aws-cdk/aws-appmesh/package.json
+++ b/packages/@aws-cdk/aws-appmesh/package.json
@@ -107,10 +107,16 @@
       "construct-ctor-props-type:@aws-cdk/aws-appmesh.ImportedVirtualNode",
       "construct-ctor-props-type:@aws-cdk/aws-appmesh.ImportedVirtualRouter",
       "construct-ctor-props-type:@aws-cdk/aws-appmesh.ImportedVirtualService",
+      "from-signature:@aws-cdk/aws-appmesh.GatewayRoute.fromGatewayRouteName",
       "from-signature:@aws-cdk/aws-appmesh.Route.fromRouteName",
       "from-signature:@aws-cdk/aws-appmesh.VirtualNode.fromVirtualNodeName",
       "from-signature:@aws-cdk/aws-appmesh.VirtualRouter.fromVirtualRouterName",
       "from-signature:@aws-cdk/aws-appmesh.VirtualService.fromVirtualServiceName",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayRoute.gatewayRouteMeshName",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayRoute.gatewayRouteMeshOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayRoute.gatewayRouteResourceOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayRoute.gatewayRouteUid",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayRoute.gatewayRouteVirtualGatewayName",
       "resource-attribute:@aws-cdk/aws-appmesh.IMesh.meshUid",
       "resource-attribute:@aws-cdk/aws-appmesh.IRoute.routeUid",
       "resource-attribute:@aws-cdk/aws-appmesh.IVirtualNode.virtualNodeUid",
@@ -124,6 +130,10 @@
       "resource-attribute:@aws-cdk/aws-appmesh.Route.routeResourceOwner",
       "resource-attribute:@aws-cdk/aws-appmesh.Route.routeUid",
       "resource-attribute:@aws-cdk/aws-appmesh.Route.routeVirtualRouterName",
+      "resource-attribute:@aws-cdk/aws-appmesh.VirtualGateway.virtualGatewayMeshName",
+      "resource-attribute:@aws-cdk/aws-appmesh.VirtualGateway.virtualGatewayMeshOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.VirtualGateway.virtualGatewayResourceOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.VirtualGateway.virtualGatewayUid",
       "resource-attribute:@aws-cdk/aws-appmesh.VirtualNode.virtualNodeMeshName",
       "resource-attribute:@aws-cdk/aws-appmesh.VirtualNode.virtualNodeMeshOwner",
       "resource-attribute:@aws-cdk/aws-appmesh.VirtualNode.virtualNodeResourceOwner",
