feat(eks): EKS is now in Developer Preview (#10518)
Graduate the module to *Developer Preview*.

This PR also includes some last minute API changes we feel make it a little more semantically clear.

In addition, the README was restructured to be more coherent. See [rendered version](https://github.com/aws/aws-cdk/blob/epolon/10364-eks-dev-preview/packages/%40aws-cdk/aws-eks/README.md).

Happy to break this down to multiple PR's if you find it hard to review.

BREAKING CHANGE: `cluster.addChart` renamed to `cluster.addHelmChart`

* **eks:** `NodegroupOptions.launchTemplate` renamed to `NodegroupOptions.launchTemplateSpec`
* **eks:** `cluster.addAutoScalingGroup` renamed to `cluster.connectAutoScalingGroupCapacity`
* **eks:** `cluster.addNodegroup` renamed to `cluster.addNoedgroupCapacity`
* **eks:** `cluster.addCapacity` renamed to `cluster.addAutoScalingGroupCapacity`
* **eks:** `CapacityOptions` renamed to `AutoScalingGroupCapacityOptions`.

Resolves https://github.com/aws/aws-cdk/issues/10364

----

*By submitting this pull request, I confirm that my contribution is made under the terms of the Apache-2.0 license*

--- a/packages/@aws-cdk/aws-eks/package.json
+++ b/packages/@aws-cdk/aws-eks/package.json
@@ -114,7 +114,7 @@
     ]
   },
   "stability": "experimental",
-  "maturity": "experimental",
+  "maturity": "developer-preview",
   "awscdkio": {
     "announce": false
   }
