add python classifiers for appflow

--- a/packages/@aws-cdk/aws-appflow/package.json
+++ b/packages/@aws-cdk/aws-appflow/package.json
@@ -24,7 +24,11 @@
       },
       "python": {
         "distName": "aws-cdk.aws-appflow",
-        "module": "aws_cdk.aws_appflow"
+        "module": "aws_cdk.aws_appflow",
+        "classifiers": [
+          "Framework :: AWS CDK",
+          "Framework :: AWS CDK :: 1"
+        ]
       }
     }
   },
