--- a/packages/@aws-cdk/aws-cloudfront/package.json
+++ b/packages/@aws-cdk/aws-cloudfront/package.json
@@ -151,7 +151,10 @@
       "docs-public-apis:@aws-cdk/aws-cloudfront.ViewerCertificate.aliases",
       "docs-public-apis:@aws-cdk/aws-cloudfront.ViewerCertificate.props",
       "docs-public-apis:@aws-cdk/aws-cloudfront.ViewerCertificateOptions",
-      "props-default-doc:@aws-cdk/aws-cloudfront.ViewerCertificateOptions.aliases"
+      "props-default-doc:@aws-cdk/aws-cloudfront.ViewerCertificateOptions.aliases",
+      "construct-interface-extends-iconstruct:@aws-cdk/aws-cloudfront.ICachePolicy",
+      "resource-interface-extends-resource:@aws-cdk/aws-cloudfront.ICachePolicy",
+      "resource-attribute:@aws-cdk/aws-cloudfront.CachePolicy.cachePolicyLastModifiedTime"
     ]
   },
   "awscdkio": {
