feat(rds): construct for Aurora Serverless Clusters (#10516)
Adds a new construct to specify Aurora Serverless clusters

This is largely a stripped down version of `Cluster` as there are many properties
within clusters that do not apply to Aurora Serverless. Some of the notable
exclusions are:
* backup windows
* maintenance windows
* associated roles (as S3 import/exports are not supported)
* iam database authentication
* exporting cloudwatch log exports
* storage encryption is always true in Aurora serverless

Added:
* Scaling options which only apply to Aurora serverless and cannot be used for
   provisioned clusters
* Enum `AuroraCapacityUnit` to specify the provisioned capacity
* Enable http endpoint for a serverless cluster

Closes #929

----

*By submitting this pull request, I confirm that my contribution is made under the terms of the Apache-2.0 license*

--- a/packages/@aws-cdk/aws-rds/package.json
+++ b/packages/@aws-cdk/aws-rds/package.json
@@ -115,6 +115,7 @@
       "props-physical-name:@aws-cdk/aws-rds.DatabaseInstanceFromSnapshotProps",
       "props-physical-name:@aws-cdk/aws-rds.DatabaseInstanceReadReplicaProps",
       "props-physical-name:@aws-cdk/aws-rds.DatabaseSecretProps",
+      "props-physical-name:@aws-cdk/aws-rds.ServerlessClusterProps",
       "props-physical-name:@aws-cdk/aws-rds.OptionGroupProps",
       "props-physical-name:@aws-cdk/aws-rds.SubnetGroupProps",
       "docs-public-apis:@aws-cdk/aws-rds.SecretRotationApplication.semanticVersion",
