--- a/.github/workflows/closed-issue-message.yml
+++ b/.github/workflows/closed-issue-message.yml
@@ -1,4 +1,4 @@
-name: Closed Issue Message
+name: "Closed Issue Message"
 on:
     issues:
        types: [closed]
@@ -7,7 +7,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - uses: aws-actions/closed-issue-message@v1
-            with:
+          with:
             # These inputs are both required
             repo-token: "${{ secrets.GITHUB_TOKEN }}"
             message: |
