--- a/packages/@aws-cdk/aws-eks/package.json
+++ b/packages/@aws-cdk/aws-eks/package.json
@@ -76,7 +76,8 @@
     "cfn2ts": "0.0.0",
     "nodeunit": "^0.11.3",
     "pkglint": "0.0.0",
-    "sinon": "^9.0.3"
+    "sinon": "^9.0.3",
+    "cdk8s-plus": "^0.29.0"
   },
   "dependencies": {
     "@aws-cdk/aws-autoscaling": "0.0.0",
