--- a/packages/@aws-cdk/aws-servicecatalog/package.json
+++ b/packages/@aws-cdk/aws-servicecatalog/package.json
@@ -95,5 +95,10 @@
   "maturity": "cfn-only",
   "awscdkio": {
     "announce": false
+  },
+  "awslint": {
+    "exclude": [
+      "props-physical-name:@aws-cdk/aws-servicecatalog.ProductProps"
+    ]
   }
 }
