change branch name for now

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -20,7 +20,7 @@ phases:
     commands:
       # we bump here so that our master version won't be identical to the latest published version during tests.
       # otherwise this causes problems with verdaccio mirroring.
-      - if [ "$(git rev-parse --abbrev-ref HEAD)" = "master" ]; then /bin/bash ./bump.sh minor rc; fi;
+      - if [ "$(git rev-parse --abbrev-ref HEAD)" = "epolon-regression" ]; then /bin/bash ./bump.sh minor rc; fi;
       - /bin/bash ./scripts/align-version.sh
       - /bin/bash ./build.sh
   post_build:
