--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,8 +21,8 @@ phases:
       # we bump here so that our master version won't be identical to the latest published version during tests.
       # otherwise this causes problems with verdaccio mirroring.
       - '[ ${GIT_BRANCH} = "epolon-regression" ] && PRE_RELEASE_TAG=rc SKIP_COMMIT=true /bin/bash ./bump.sh'
-      - /bin/bash ./scripts/align-version.sh
-      - /bin/bash ./build.sh
+      #- /bin/bash ./scripts/align-version.sh
+      #- /bin/bash ./build.sh
   post_build:
     commands:
       - "[ -f .BUILD_COMPLETED ] && /bin/bash ./pack.sh"
