--- a/packages/@aws-cdk/aws-config/package.json
+++ b/packages/@aws-cdk/aws-config/package.json
@@ -101,6 +101,16 @@
   },
   "stability": "experimental",
   "maturity": "developer-preview",
+  "features": [
+    {
+      "name": "Higher level constructs for AWS managed and custom Config Rules",
+      "stability": "Experimental"
+    },
+    {
+      "name": "Higher level constructs for initial set-up (delivery channel & configuration recorder)",
+      "stability": "Not Implemented"
+    }
+  ],
   "awscdkio": {
     "announce": false
   }
