--- a/packages/@monocdk-experiment/rewrite-imports/package.json
+++ b/packages/@monocdk-experiment/rewrite-imports/package.json
@@ -32,12 +32,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "glob": "^7.1.6",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.7",
+    "yargs": "^16.0.3"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.14",
     "@types/node": "^10.17.35",
+    "@types/yargs": "^15.0.7",
     "cdk-build-tools": "0.0.0",
     "pkglint": "0.0.0"
   },
