--- a/packages/monocdk/package.json
+++ b/packages/monocdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monocdk-experiment",
+  "name": "monocdk",
   "version": "0.0.0",
   "description": "An experiment to bundle the entire CDK into a single module",
   "main": "lib/index.js",
@@ -7,7 +7,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/aws/aws-cdk.git",
-    "directory": "packages/monocdk-experiment"
+    "directory": "packages/monocdk"
   },
   "stability": "experimental",
   "maturity": "developer-preview",
@@ -52,7 +52,7 @@
     "targets": {
       "dotnet": {
         "namespace": "Amazon.CDK",
-        "packageId": "Amazon.CDK.MonoCDK.Experiment",
+        "packageId": "Amazon.CDK.MonoCDK.",
         "iconUrl": "https://raw.githubusercontent.com/aws/aws-cdk/master/logo/default-256-dark.png",
         "versionSuffix": "-devpreview",
         "signAssembly": true,
@@ -62,13 +62,13 @@
         "package": "software.amazon.awscdk.core",
         "maven": {
           "groupId": "software.amazon.awscdk",
-          "artifactId": "monocdk-experiment",
+          "artifactId": "monocdk",
           "versionSuffix": ".DEVPREVIEW"
         }
       },
       "python": {
-        "distName": "monocdk.experiment",
-        "module": "monocdk_experiment"
+        "distName": "monocdk",
+        "module": "monocdk"
       }
     },
     "projectReferences": false
