--- a/packages/monocdk/package.json
+++ b/packages/monocdk/package.json
@@ -52,7 +52,7 @@
     "targets": {
       "dotnet": {
         "namespace": "Amazon.CDK",
-        "packageId": "Amazon.CDK.MonoCDK.",
+        "packageId": "Amazon.CDK.MonoCDK",
         "iconUrl": "https://raw.githubusercontent.com/aws/aws-cdk/master/logo/default-256-dark.png",
         "versionSuffix": "-devpreview",
         "signAssembly": true,
