feat(cloudfront): support for origin request policies
Support for the new Origin Request Policy concept in CloudFront, which provides
greater control to users over what values are forwarded to the origin from the
original viewer request.

_Implementation Notes:_
* *Heavily* influenced by #10656, including the same notes on not extending from
  `IResource` and excluding the `lastModifiedTimestamp`.

fixes #9647

--- a/packages/@aws-cdk/aws-cloudfront/package.json
+++ b/packages/@aws-cdk/aws-cloudfront/package.json
@@ -154,7 +154,10 @@
       "props-default-doc:@aws-cdk/aws-cloudfront.ViewerCertificateOptions.aliases",
       "construct-interface-extends-iconstruct:@aws-cdk/aws-cloudfront.ICachePolicy",
       "resource-interface-extends-resource:@aws-cdk/aws-cloudfront.ICachePolicy",
-      "resource-attribute:@aws-cdk/aws-cloudfront.CachePolicy.cachePolicyLastModifiedTime"
+      "resource-attribute:@aws-cdk/aws-cloudfront.CachePolicy.cachePolicyLastModifiedTime",
+      "construct-interface-extends-iconstruct:@aws-cdk/aws-cloudfront.IOriginRequestPolicy",
+      "resource-interface-extends-resource:@aws-cdk/aws-cloudfront.IOriginRequestPolicy",
+      "resource-attribute:@aws-cdk/aws-cloudfront.OriginRequestPolicy.originRequestPolicyLastModifiedTime"
     ]
   },
   "awscdkio": {
