chore(secretsmanager): migrate tests to jest
No tests or expectations added or removed.

--- a/packages/@aws-cdk/aws-secretsmanager/package.json
+++ b/packages/@aws-cdk/aws-secretsmanager/package.json
@@ -54,6 +54,7 @@
   },
   "cdk-build": {
     "cloudformation": "AWS::SecretsManager",
+    "jest": true,
     "env": {
       "AWSLINT_BASE_CONSTRUCT": true
     }
