--- a/packages/aws-cdk/package.json
+++ b/packages/aws-cdk/package.json
@@ -62,8 +62,7 @@
     "pkglint": "0.0.0",
     "sinon": "^9.1.0",
     "ts-jest": "^26.4.1",
-    "ts-mock-imports": "^1.3.0",
-    "@octokit/rest": "^18.0.6"
+    "ts-mock-imports": "^1.3.0"
   },
   "dependencies": {
     "@aws-cdk/cloud-assembly-schema": "0.0.0",
