--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -20,7 +20,7 @@ phases:
     commands:
       # we bump here so that our master version won't be identical to the latest published version during tests.
       # otherwise this causes problems with verdaccio mirroring.
-      - '[ ${GIT_BRANCH} = "epolon-regression" ] && PRE_RELEASE_TAG=rc SKIP_COMMIT=true SKIP_CHANGELOG=true /bin/bash ./bump.sh'
+      - '[ ${GIT_BRANCH} = "epolon-regression" ] && /bin/bash ./bump-candidate.sh'
       - /bin/bash ./scripts/align-version.sh
       - /bin/bash ./build.sh
   post_build:
