--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
       "@aws-cdk/aws-codepipeline-actions/case/**",
       "@aws-cdk/aws-ecr-assets/minimatch",
       "@aws-cdk/aws-ecr-assets/minimatch/**",
+      "@aws-cdk/core/@balena/dockerignore",
+      "@aws-cdk/core/@balena/dockerignore/**",
+      "@aws-cdk/core/ignore",
+      "@aws-cdk/core/ignore/**",
       "@aws-cdk/aws-eks/yaml",
       "@aws-cdk/aws-eks/yaml/**",
       "@aws-cdk/aws-lambda-nodejs/parcel-bundler",
