Implements Gateway Routes

--- a/packages/@aws-cdk/aws-appmesh/package.json
+++ b/packages/@aws-cdk/aws-appmesh/package.json
@@ -107,6 +107,7 @@
       "construct-ctor-props-type:@aws-cdk/aws-appmesh.ImportedVirtualNode",
       "construct-ctor-props-type:@aws-cdk/aws-appmesh.ImportedVirtualRouter",
       "construct-ctor-props-type:@aws-cdk/aws-appmesh.ImportedVirtualService",
+      "construct-ctor-props-type:@aws-cdk/aws-appmesh.GatewayRoute",
       "from-signature:@aws-cdk/aws-appmesh.GatewayRoute.fromGatewayRouteName",
       "from-signature:@aws-cdk/aws-appmesh.Route.fromRouteName",
       "from-signature:@aws-cdk/aws-appmesh.VirtualGateway.fromVirtualGatewayName",
@@ -118,6 +119,24 @@
       "resource-attribute:@aws-cdk/aws-appmesh.GatewayRoute.gatewayRouteResourceOwner",
       "resource-attribute:@aws-cdk/aws-appmesh.GatewayRoute.gatewayRouteUid",
       "resource-attribute:@aws-cdk/aws-appmesh.GatewayRoute.gatewayRouteVirtualGatewayName",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayGrpcRoute.gatewayRouteMeshName",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayGrpcRoute.gatewayRouteMeshOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayGrpcRoute.gatewayRouteUid",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayGrpcRoute.gatewayRouteResourceOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayGrpcRoute.gatewayRouteUid",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayGrpcRoute.gatewayRouteVirtualGatewayName",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttp2Route.gatewayRouteMeshName",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttp2Route.gatewayRouteMeshOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttp2Route.gatewayRouteUid",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttp2Route.gatewayRouteResourceOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttp2Route.gatewayRouteUid",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttp2Route.gatewayRouteVirtualGatewayName",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttpRoute.gatewayRouteMeshName",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttpRoute.gatewayRouteMeshOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttpRoute.gatewayRouteUid",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttpRoute.gatewayRouteResourceOwner",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttpRoute.gatewayRouteUid",
+      "resource-attribute:@aws-cdk/aws-appmesh.GatewayHttpRoute.gatewayRouteVirtualGatewayName",
       "resource-attribute:@aws-cdk/aws-appmesh.IMesh.meshUid",
       "resource-attribute:@aws-cdk/aws-appmesh.IRoute.routeUid",
       "resource-attribute:@aws-cdk/aws-appmesh.IVirtualNode.virtualNodeUid",
