fix(aws-lambda-nodejs): lock yarn version
aws-lambda-nodejs have issue

* [npm install -g yarn · Issue #6 · nodejs/corepack](https://github.com/nodejs/corepack/issues/6)
* [npm install yarn --global fails in docker container · Issue #8358 · yarnpkg/yarn](https://github.com/yarnpkg/yarn/issues/8358)

From issue comment,

> For future reference, you can (should) pin your version rather than use whatever the latest is on npm (by using yarn@1.22.6, etc) - it's a good practice anyway regardless of the conditions, as you never know which bug could slip by us. You can also use the yarn-path setting to ensure that upgrades go through the appropriate review processes (including CI).
>
> <https://github.com/yarnpkg/yarn/issues/8358#issuecomment-700011305>

So we'll follow it.

And from issue comment,

> Fwiw we don't plan to add any more features to Yarn 1, as all of our resources have shifted to Yarn 2. The past few commits have been aimed toward making the transition a bit easier, in particular thanks to the Corepack initiative which we hope will make it easier to use Yarn (both 1 & 2) by removing the need to manually install them.
>
> <https://github.com/yarnpkg/yarn/issues/8358#issuecomment-700018785>

There's not much need to be concerned with the latest version of 1.

--- a/packages/@aws-cdk/aws-lambda-nodejs/parcel/Dockerfile
+++ b/packages/@aws-cdk/aws-lambda-nodejs/parcel/Dockerfile
@@ -4,7 +4,7 @@ ARG IMAGE=amazon/aws-sam-cli-build-image-nodejs12.x
 FROM $IMAGE
 
 # Install yarn
-RUN npm install --global yarn
+RUN npm install --global yarn@1.22.5
 
 # Install parcel 2 (fix the version since it's still in beta)
 # install at "/" so that node_modules will be in the path for /asset-input
