fix(aws-lambda-nodejs): allow execute command for non root user
`amazon/aws-sam-cli-build-image-nodejs12.x` don't have user that index is 1000.
So create non root user.

`/` in `amazon/aws-sam-cli-build-image-nodejs12.x` permission is `700`.
change to allow execute command for non root user.
I really don't want to change around the permissions,
but I don't have a choice.

--- a/packages/@aws-cdk/aws-lambda-nodejs/parcel/Dockerfile
+++ b/packages/@aws-cdk/aws-lambda-nodejs/parcel/Dockerfile
@@ -19,4 +19,7 @@ RUN mkdir /tmp/npm-cache && \
 # Disable npm update notifications
 RUN npm config --global set update-notifier false
 
+# create non root user and change allow execute command for non root user
+RUN /sbin/useradd -u 1000 user && chmod 711 /
+
 CMD [ "parcel" ]
