--- a/.github/workflows/auto-approve-v2-merge-forward.yml
+++ b/.github/workflows/auto-approve-v2-merge-forward.yml
@@ -14,7 +14,7 @@ on:
       - unlocked
 
 jobs:
-  build:
+  approve:
     runs-on: ubuntu-latest
     steps:
     - uses: hmarr/auto-approve-action@v2.0.0
