feat(cli): add ssm parameters for kms key and qualifier (#10904)
----

*By submitting this pull request, I confirm that my contribution is made under the terms of the Apache-2.0 license*

--- a/packages/aws-cdk/lib/api/bootstrap/bootstrap-template.yaml
+++ b/packages/aws-cdk/lib/api/bootstrap/bootstrap-template.yaml
@@ -38,6 +38,10 @@ Parameters:
     Type: 'String'
     AllowedValues: ['true', 'false']
 Conditions:
+  DefaultQualifier:
+    Fn::Equals:
+      - 'hnb659fds'
+      - Ref: Qualifier
   HasTrustedAccounts:
     Fn::Not:
       - Fn::Equals:
@@ -382,6 +386,25 @@ Resources:
       Name:
         Fn::Sub: '/cdk-bootstrap/${Qualifier}/version'
       Value: 4
+  CdkKmsKey:
+        Type: AWS::SSM::Parameter
+        Properties:
+          Type: String
+          Name:
+            Fn::Sub: '/cdk-bootstrap/${Qualifier}/kms-key'
+          Value:
+            Fn::If:
+              - CreateNewKey
+              - Fn::Sub: "${FileAssetsBucketEncryptionKey.Arn}"
+              - Fn::Sub: "${FileAssetsBucketKmsKeyId}"
+  CdkQualifier:
+      Type: AWS::SSM::Parameter
+      Properties:
+        Type: String
+        Name:
+          Fn::Sub: '/cdk-bootstrap/default-qualifier'
+        Value: hnb659fds
+      Condition: DefaultQualifier
 Outputs:
   BucketName:
     Description: The name of the S3 bucket owned by the CDK toolkit stack
