* add 'no-gen' * cdk-build.pre now support array of commands

--- a/packages/@aws-cdk/core/package.json
+++ b/packages/@aws-cdk/core/package.json
@@ -142,7 +142,9 @@
     "cfn2ts-core-import": ".",
     "jest": true,
     "pre": [
-      "rm -rf test/fs/fixtures && cd test/fs && tar -xzf fixtures.tar.gz"
+      "rm -rf test/fs/fixtures",
+      "cd test/fs",
+      "tar -xzf fixtures.tar.gz"
     ],
     "env": {
       "AWSLINT_BASE_CONSTRUCT": "true"
